<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.gebel.threelayerarchitecture</groupId>
	<artifactId>three-layer-architecture-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
	
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>17</java.version>
		
		<!-- Spring -->
		<spring-boot.version>2.7.3</spring-boot.version>

		<!-- Miscellaneous -->
		<lombok.version>1.18.24</lombok.version>
		<commons-lang3>3.12.0</commons-lang3>
		<commons-collections4.version>4.4</commons-collections4.version>
		<mysql-connector-java.version>8.0.30</mysql-connector-java.version>
		<springdoc-openapi-ui.version>1.6.11</springdoc-openapi-ui.version>

		<!-- Test -->
		<testcontainers.version>1.17.3</testcontainers.version>
		
		<!-- Plugins -->
		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
		<maven-resources-plugin.version>3.3.0</maven-resources-plugin.version>
		<maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
		<maven-install-plugin.version>3.0.1</maven-install-plugin.version>
		<maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
		<maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
		<maven-failsafe-plugin.version>3.0.0-M7</maven-failsafe-plugin.version>
		
	</properties>

	<modules>
		<module>three-layer-architecture-sandbox</module>
		<module>three-layer-architecture-dao</module>
		<module>three-layer-architecture-business</module>
		<module>three-layer-architecture-controller</module>
	</modules>
	
	<dependencyManagement>
		<dependencies>

			<!-- Spring -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-parent</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Miscellaneous -->
			<dependency>
				<groupId>com.gebel.threelayerarchitecture</groupId>
				<artifactId>three-layer-architecture-dao</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.gebel.threelayerarchitecture</groupId>
				<artifactId>three-layer-architecture-business</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons-lang3}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>${commons-collections4.version}</version>
			</dependency>
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>${mysql-connector-java.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-ui</artifactId>
				<version>${springdoc-openapi-ui.version}</version>
			</dependency>

			<!-- Test -->
			<dependency>
				<groupId>com.gebel.threelayerarchitecture</groupId>
				<artifactId>three-layer-architecture-sandbox</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-bom</artifactId>
				<version>${testcontainers.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<release>${java.version}</release>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven-resources-plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>${maven-clean-plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>${maven-install-plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven-jar-plugin.version}</version>
				</plugin>
				
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${spring-boot.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
					<configuration>
						<includes>
							<include>**/*Test.java</include> <!-- Unit tests -->
							<include>**/*IT.java</include> <!-- Integration tests -->
						</includes>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>

		<plugins>
			<!-- Must remain empty -->
		</plugins>

	</build>

	<dependencies>
		<!-- Must remain empty -->
	</dependencies>

</project>